<resources>
    <string name="app_name">Wissenaire</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Campus Ambassador</string>
    <string name="menu_slideshow">Guest Lectures</string>
    <string name="menu_tools">Starnites</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="wissenaire_20">   WISSENAIRE\'20</string>
    <string name="www_wissenaire_org">   www.wissenaire.org</string>
    <string name="sponsors">Sponsors</string>
    <string name="campus_ambassador">Campus Ambassador</string>
    <string name="guest_lectures">Guest lectures</string>
    <string name="starnites">Starnites</string>
    <string name="team">Team</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="workshops">WorkShops</string>
    <string name="helpdesk">HelpDesk</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="q_wissenaire_is_a_national_level_competitive_exam_for_students_of_8th_9th_10th_1_and_2_to_bring_about_a_qualitative_improvement_of_education_in_the_country_this_examination_provide_an_opportunity_for_jee_aspirants_to_compare_and_compete_with_other_peers_across_country">Qwissenaire is a National Level Competitive Exam for students of 8th, 9th,10th, +1 and +2 to bring about a qualitative improvement of education in the country.</string>
    <string name="qwissenaire">Qwissenaire</string>
    <string name="tod">TODO</string>
    <string name="problem_statement">Problem Statement</string>
    <string name="memoryc">Are you the Master of your mind? Do you have ultimate control over your memory? Take the Memory Challenge to find out! Jump through a series of three rounds, and be able to recall most words, numbers and audio, in the correct order, to be crowned as the Master of retention.\n\n

Contact Details:\n

G.Snehitha\n
Event Coordinator- Wissenaire’20\n
Phone no- 7330999838\n
Email-gs31@iitbbs.ac.in\n
</string>
    <string name="schoolc">"Education is not learning of facts but training the mind to think Wissenaire'20 provides an eminent platform to all the young minds out there brimming with enthusiasm. With the prime motive of nurturing cognitive skills and wide exposure to school students, here comes the School Champ with its 4 rounds. Grab this opportunity bestowed on you!!


Contact Details:
K.Revanth
Event Coordinator
Phone no: +919381100592


</string>
    <string name="golden_goal_fifa">Golden Goal FIFA</string>
    <string name="fifae">Wissenaire presents Golden Goal FIFA Championship by IIT Bhubaneswar with a prize pool upto RS 15,000. It makes it one of the biggest FIFA esports in Odisha till date.\n\n

                        Contact Details:\n

                        Sri Harsha\n
                        Event Coordinator, Wissenaire’20\n
                        Phone: 9381473491\n
                        Email ID: ksh10@iitbbs.ac.in\n</string>
    <string name="wissenaire_presents_golden_goal_fifa_championship_by_iit_bhubaneswar_with_a_prize_pool_upto_rs_15_000_it_makes_it_one_of_the_biggest_fifa_esports_in_odisha">Wissenaire presents Golden Goal FIFA Championship by IIT Bhubaneswar with a prize pool upto RS 15,000. It makes it one of the biggest FIFA esports in Odisha.</string>
    <string name="school_champ">School Champ</string>
    <string name="wissenaire_20_provides_an_eminent_platform_to_all_the_young_minds_out_there_brimming_with_enthusiasm_with_the_prime_motive_of_nurturing_cognitive_skills_and_wide_exposure_to_school_students_here_comes_the_school_champ_with_its_4_rounds">Wissenaire\'20 provides an eminent platform to all the young minds out there brimming with enthusiasm.</string>
    <string name="quizzaire">Quizzaire</string>
    <string name="wissenaire_20_provides_you_the_platform_to_re_evaluate_the_knowledge_with_exciting_set_of_rounds_with_a_combination_of_breath_taking_questions_from_the_world_of_business_and_enterpreneurship_technology_and_science_domain">Wissenaire\'20 provides you the platform to re-evaluate the knowledge with exciting set of rounds with a combination of breath-taking questions from the world of Business and Enterpreneurship, Technology and Science domain.</string>
    <string name="are_you_the_master_of_your_mind_do_you_have_ultimate_control_over_your_memory_take_the_memory_challenge_to_find_out_jump_through_a_series_of_three_rounds_and_be_able_to_recall_most_words_numbers_and_audio_in_the_correct_order_to_be_crowned_as_the_master_of_retention">Are you the Master of your mind? Do you have ultimate control over your memory? Take the Memory Challenge to find out! </string>
    <string name="memory_challenge">Memory challenge</string>
    <string name="quizzai">Introduction:\n
Wissenaire’20 provides you the platform to re-evaluate your knowledge with exhilarating set of
rounds comprising of breath-taking questions from the world of Business and entrepreneurship, Technology and Science domain. Lets not make it too late to grab the only chance! prove to the other top notch quizzers, that you are the best!\n\n
Contact Details:\n

D.Madhumitha\n
Event Coordinator, Wisseanire’20\n
Phone: 9494288822\n
Email ID: dm26@iitbbs.ac.in
</string>
    <string name="colloquia">Colloquia</string>
    <string name="wissenaire_20_present_s_you_an_opportunity_to_showcase_your_innovative_ideas_before_the_esteemed_judges_and_inquisitive_audience_that_brings_together_talented_thinkers_around_the_country_to_present_discuss_and_develop_solutions_to_advance_technology_for_humanity">WISSENAIRE\'20 present\'s you an opportunity to showcase your innovative ideas before the esteemed judges and inquisitive audience that brings together talented thinkers around the country to present, discuss and develop solutions to advance technology for humanity.</string>
    <string name="civil_colloquia">Civil Colloquia</string>
    <string name="mechanical_colloquia">Mechanical Colloquia</string>
    <string name="electrical_colloquia">Electrical Colloquia</string>
    <string name="computer_science_colloquia">Computer Science Colloquia</string>
    <string name="compu">Wissenaire present\'s you an opportunity to showcase your innovative ideas before the esteemed judges and inquisitive audience at one of the most awaited tech-fest of east India and it is a one of the greatest platform that brings together talented thinkers around the country to present, discuss and develop solutions to advance technology for humanity. So what are you waiting for? Seize this opportunity to express yourself and explore your ideas!\n\n
        Contact Details:\n
Aakanksha\n Event Coordinator, Wissenaire’20\n
 Phone: +91-9326195804\n
 Email id: ajn10@iitbbs.ac.in\n


</string>
    <string name="wissenaire_20_provides_an_eminent_platform_to_all_the_people_to_show_case_their_skills_and_innovative_ideas">Wissenaire\'20 provides an eminent platform to all the people to show case their skills and Innovative ideas</string>
    <string name="executive_suite">Executive Suite</string>
    <string name="auction_war">Auction War</string>
    <string name="auct">Introduction:\n
Do you have what it takes to form the ultimate squad?? Do you have the skills to get the best out of your buck? If you can give me a yes both the times, then come and participate in this fun filled event where you can even bring out the comic geek in you. Form the ultimate squad of DC and MARVEL characters by participating in an auction and show the competition that you are the best in managing your money.\n\n
Contact Details:\n
Event co-ordinator:\n Deepak Mahalik\n
                                  Phone: +91-7008248735\n
                                  Email: dm16@iitbbs.ac.in\n

</string>
    <string name="pioneers_plan">Pioneers Plan</string>
    <string name="pio">Introduction:\nAn idea can change your life from nowhere to somewhere. start-ups are the most trending in this contemporary world. A single idea can impact the life style of millions in the world. From this event we are providing the platform to the ideas of the students across India and giving the chance to present their ideas in front of the higher ones which will be useful in the higher stages of the life for the individual.\n\n

        Contact Details :\n
Chaitra Vardhan\n
Event Coordinator\n
Wissenaire’20\n
Phone NO : +916303317836\n
Email-ID : bcv10@iitbbs..ac.in\n

</string>
    <string name="mad_ads">Mad Ads</string>
    <string name="iot_workshop">IOT with Google Assistant</string>
    <string name="mercedes_engine_analysis">Mercedes Engine Analysis</string>
    <string name="hexapod_robotics_workshop">Hexapod Robotics Workshop</string>
    <string name="mercedes_is_known_for_its_hybrid_engine_variants_but_how_do_they_do_it_what_components_are_used_for_building_an_engine_come_and_have_a_experience_and_let_your_brains_go_bragging_about_the_engine_diagnosis">Mercedes is known for its hybrid engine variants, but how do they do it? What components are used for building an engine? Come and let your brains go bragging about the engine analysis.</string>
    <string name="iot_workshop_is_specially_designed_for_students_from_electronics_electrical_computer_science_and_it_who_have_keen_interest_in_interfacing_various_types_of_sensors_and_working_with_communication_modules_like_bluetooth">IOT Workshop is specially designed for students from Electronics, Electrical, Computer Science and IT who have Keen interest in interfacing various types of sensors and working with different modules.</string>
    <string name="a_hexapod_robot_is_a_mechanical_robot_that_walks_on_six_legs_it_imitates_insect_crawling_motion_and_is_the_most_famous_one_in_the_legged_robots_category_come_and_grab_the_opportunity_to_build_your_own_hexapod">A Hexapod robot is a mechanical robot that walks on six legs. It imitates Insect Crawling motion and is the most famous one in the legged robots category.</string>
    <string name="have_you_ever_wondered_about_the_amount_of_data_we_are_dealing_with_these_days_such_large_data_have_many_challenges_which_include_capturing_data_data_storage_data_analysis_etc_big_data_is_the_field_that_deals_with_analysis_of_such_large_data">Have you ever wondered about the amount of data we are dealing with these days? Such large data have many challenges which include capturing data, data storage, data analysis, etc.</string>
    <string name="big_data_and_data_analytics">Big Data and Data Analytics</string>
    <string name="bridge_design">Bridge Design</string>
    <string name="bridge_design_is_one_of_the_oldest_subjects_in_civil_engineering_this_course_deals_with_bridge_substructure_systems_highlighting_the_more_technical_aspects_of_the_design_and_rehabilitation_of_the_bridge_substructure">This course deals with bridge substructure systems, highlighting the more technical aspects of the design and rehabilitation of the bridge
substructure.</string>
    <string name="todo">TODO</string>
</resources>