<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="Schedule" />
        <item
            android:id="@+id/nav_ca"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/campus_ambassador" />
        <item
            android:id="@+id/nav_gl"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/guest_lectures" />
        <item
            android:id="@+id/nav_starnites"
            android:icon="@drawable/ic_party_mode_black_24dp"
            android:title="@string/starnites" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/sponsors" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/team" />
    </group>


</menu>
