<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="100"
        android:title="@string/home"
        />

    <item
        android:id="@+id/action_events"
        android:icon="@drawable/ic_event_black_24dp"
        android:orderInCategory="101"
        android:title="@string/events"
        />

    <item
        android:id="@+id/action_workshops"
        android:icon="@drawable/ic_build_black_24dp"
        android:orderInCategory="102"
        android:title="@string/workshops" />

    <item
        android:id="@+id/action_helpdesk"
        android:icon="@drawable/ic_perm_phone_msg_black_24dp"
        android:orderInCategory="103"
        android:title="@string/helpdesk"
        />

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_place_black_24dp"
        android:orderInCategory="104"
        android:title="@string/map"
        />

</menu>
