<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="46dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/contentimage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"

                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#848484" />

                <TextView
                    android:id="@+id/tectvi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/problem_statement"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contenttext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAlignBottom="true"
                    android:layout_margin="6dp"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:contentDescription="@string/tod"
                    android:scaleType="fitCenter"
                    android:visibility="visible"
                    app:srcCompat="@drawable/red" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>