<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="46dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/card6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ai"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/ai" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="AL and ML Workshop"

                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Machine learning is an application of artificial
intelligence (AI) that provides systems the ability to automatically learn and improve from experience
without being explicitly programmed."
                        android:textColor="@android:color/black" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iot"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/iot" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/iot_workshop"

                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/iot_workshop_is_specially_designed_for_students_from_electronics_electrical_computer_science_and_it_who_have_keen_interest_in_interfacing_various_types_of_sensors_and_working_with_communication_modules_like_bluetooth"
                        android:textColor="@android:color/black" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/web"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/web" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Web Development"

                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Web development broadly refers to the tasks associated with developing websites for hosting via
intranet or internet. The web development process includes web design, web content development,
server-side scripting."
                        android:textColor="@android:color/black" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mercedes"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/mercedes" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mercedes_engine_analysis"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"

                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mercedes_is_known_for_its_hybrid_engine_variants_but_how_do_they_do_it_what_components_are_used_for_building_an_engine_come_and_have_a_experience_and_let_your_brains_go_bragging_about_the_engine_diagnosis"
                        android:textColor="@android:color/black" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/hexapod"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/hex"
                        app:srcCompat="@drawable/hex" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hexapod_robotics_workshop"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"

                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_hexapod_robot_is_a_mechanical_robot_that_walks_on_six_legs_it_imitates_insect_crawling_motion_and_is_the_most_famous_one_in_the_legged_robots_category_come_and_grab_the_opportunity_to_build_your_own_hexapod"
                        android:textColor="@android:color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/digital"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/digital"
                        app:srcCompat="@drawable/digital" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Social Media Marketing and SEO"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"

                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Social media technologies are continuously transforming the ways consumers interact with each other. These changes constitute a fundamental shift in the marketplace."
                        android:textColor="@android:color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/bigdata"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/big" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/big_data_and_data_analytics"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"

                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/have_you_ever_wondered_about_the_amount_of_data_we_are_dealing_with_these_days_such_large_data_have_many_challenges_which_include_capturing_data_data_storage_data_analysis_etc_big_data_is_the_field_that_deals_with_analysis_of_such_large_data"
                        android:textColor="@android:color/black" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/bridge"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/bridge" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bridge_design"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"

                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bridge_design_is_one_of_the_oldest_subjects_in_civil_engineering_this_course_deals_with_bridge_substructure_systems_highlighting_the_more_technical_aspects_of_the_design_and_rehabilitation_of_the_bridge_substructure"
                        android:textColor="@android:color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>